package Game;
public abstract class Creatures {
    public double getVida() {
        return vida;
    }

    public void setVida(double vida) {
        this.vida = vida;
    }

    protected double vida;
}
