package Game;
public class HumanToken extends Token{

    HumanToken(double cant){
        cantidad= cant *1.25;

    }
}
