public class HumanWeapon extends Weapon {
    HumanWeapon(double danos,double robos){
        dano = danos;
        robo = robos;
    }
}
